<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Database\Eloquent\Relations\HasOne;
use Illuminate\Database\Eloquent\SoftDeletes;
use App\Enums\AgentStatus;
use App\Enums\AccountType;
use App\Enums\OpeningStatus;
use OwenIt\Auditing\Auditable as AuditableTrait;
use OwenIt\Auditing\Contracts\Auditable;

class Opening extends Model implements Auditable
{
    use HasFactory, SoftDeletes, AuditableTrait;

    protected $fillable = [
        'project_id',
        'opening_nup',
        'opening_date',
        'agent_status',
        'opened_by',
        'bank',
        'account_type',
        'branch',
        'account',
        'is_draft',
        'user_id',
        'status',
        'certificate_date',
        'supervisor_id',
        'started_at',
        'submitted_at',
        'concluded_at',
    ];

    protected $casts = [
        'agent_status' => AgentStatus::class,
        'account_type' => AccountType::class,
        'status' => OpeningStatus::class,
        'opening_date' => 'date',
        'is_draft' => 'boolean',
        'certificate_date' => 'datetime',
        'started_at' => 'datetime',
        'submitted_at' => 'datetime',
        'concluded_at' => 'datetime',
    ];

    public function project()
    {
        return $this->belongsTo(Project::class);
    }

    public function user()
    {
        return $this->belongsTo(User::class);
    }

    public function fiscals(): HasMany
    {
        return $this->hasMany(OpeningSupervisor::class);
    }

    public function activeFiscal(): HasOne
    {
        return $this->hasOne(OpeningSupervisor::class)
            ->where('is_active', true)
            ->latestOfMany('assigned_at');
    }
}
